test/libyul/yulSyntaxTests/push.yul
{ 0x42:u256 }
// ----
// ParserError 6913: (12-13): Call or assignment expected.
